# zonetic-vm

./: CMakeLists.txt  README.md  zonvm
include/: common.hpp  zon_value.hpp  zon_vm.hpp
src/: main.cpp  zon_vm.cpp
